2005-08-16  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_percent): Fixed coordinate computation.

2005-08-15  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_growbuf_read_until): When using mc_read, recover
	from interrupted system calls.
	* view.c (toggle_hex_mode): Now the hex cursor is always visible
	after switching to hex mode.
	* view.c (view_ccache_lookup): Rewrote the calculation of the
	cache entry. Also don't put entries in the cache when the
	current byte is '\r'.
	* view.c (view_ccache_dump): Extended the output by the offset
	of the next line.
	* dialog.h (struct Dlg_head): Changed the bit fields of length one
	from signed int to unsigned int.
	* wtools.h: Replaced 0 with LISTBOX_APPEND_AT_END.
	* achown.c: Likewise.
	* view.c (view_toggle_ruler): Don't mix enums with ints.
	* complete.c (fetch_hosts): Removed unused variable.
	* complete.c: Don't mix enums with ints.
	* tree.c: Likewise.
	* screen.c (use_display_format): Removed unused variable.
	* widget.c: Don't mix enums with ints.

2005-08-15  Jindrich Makovicka  <makovick@kmlinux.fjfi.cvut.cz>

	* view.c: Made the search function interruptible.

2005-08-06  Roland Illig  <roland.illig@gmx.de>

	* textconf.c: Include ecs_char in the list of type
	characteristics that are printed.
	* view.c (view_growbuf_read_until): On short reads, try to read
	one more byte to check whether we're already at the end of file.
	This makes the ">=" disappear earlier.

2005-08-05  Pavel Tsekov  <ptsekov@gmx.net>

	* menu.c (menubar_draw): Use hline() instead of addch() to clear
	the menubar widget area.

2005-07-31  Roland Illig  <roland.illig@gmx.de>

	* view.c: Removed global variable have_fast_cpu. It is not used
	anymore.
	* view.h: Renamed view to mc_internal_viewer. This avoids
	hundreds of shadowed names in view.c.

2005-07-31  Roland Illig  <roland.illig@gmx.de>

	* user.c (execute_menu_command): Allow execution on no-exec
	filesystems. This fixes Savannah Bug #13832.
