@@ -1,6 +1,8 @@
 2005-08-16  Roland Illig  <roland.illig@gmx.de>
 
 	* view.c (view_percent): Fixed coordinate computation.
+	* view.c (view_place_cursor): Made the call to widget_move()
+	look like the other calls.
 
 2005-08-15  Roland Illig  <roland.illig@gmx.de>
 
